[package]
name = "base58-monero"
version = "0.3.2"
authors = ["Monero Rust Contributors", "h4sh3d <h4sh3d@protonmail.com>"]
documentation = "https://docs.rs/base58-monero"
homepage = "https://github.com/monero-rs/base58-monero"
include = [
  "src/*",
  "README.md",
  "LICENSE",
]
keywords = ["monero", "base58", "base58-check"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/monero-rs/base58-monero"
description = "Library with support for encoding/decoding Monero base58 strings."

edition = "2018"

[package.metadata]
msrv = "1.49.0"

[features]
check = ["tiny-keccak"]
stream = ["tokio", "async-stream", "futures-util"]
default = ["check"]

[dependencies]
async-stream = { version = "0.3", optional = true }
futures-util = { version = "0.3.1", optional = true }
thiserror = "1.0.24"
tiny-keccak = { version = "2.0.1", features = ["keccak"], optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }

[dev-dependencies]
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
